reach/acceptance/data/tf/security_group_inbound_allow_all.tf
resource "aws_security_group" "inbound_allow_all" {
  name        = "aat_inbound_allow_all"
  description = "Allow all outbound traffic"
  vpc_id      = "${aws_vpc.aat_vpc.id}"

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
